# aap_wizard_ocp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.azure  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SDP.md  TEST_PLAN.md  WIZARD_GUIDE.md  run.sh  setup.sh
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: auth.py  cli.py  cr_generator.py  deployer.py  inventory.py  main.py  middleware.py  models.py  ocp_client.py  ocp_deployer.py  ocp_preflight.py  onboarding.py  preflight.py  task_queue.py  worker.py
backend/app/services/: ai_debugger.py  ai_service.py  audit_service.py  backup_service.py  certificate_manager.py  config_migrator.py  config_store.py  config_validator.py  dns_validator.py  health_monitor.py  inventory_templates.py  log_analyzer.py  metrics_collector.py  notification_service.py  port_scanner.py  profile_service.py  report_generator.py  rh_download.py  rollback_manager.py  scheduler_service.py  ssh_manager.py  system_info.py
backend/tests/: conftest.py  test_api.py  test_api_extended.py  test_certificate_manager.py  test_cli.py  test_config_migrator.py  test_config_validator.py  test_cr_generator.py  test_deployer.py  test_dns_validator.py  test_inventory.py  test_inventory_templates.py  test_log_analyzer.py  test_metrics_collector.py  test_notification_service.py  test_ocp_client.py  test_ocp_preflight.py  test_onboarding.py  test_port_scanner.py  test_preflight.py  test_report_generator.py  test_rollback_manager.py  test_scheduler.py  test_services.py  test_system_info.py
deploy/: azure-container-app.sh
(+102 files in other folders)
